Fixed Spacing Issues v1

--- a/style.css
+++ b/style.css
@@ -55,35 +55,45 @@ header{
     grid-column-gap: 2em;
 }
 
-.nav-links a{
-
-}
-
 .desktop-navigation{
     display: flex;
     justify-content: space-around;
-    font-size: 1rem;
-    padding:10px;
-    margin-top: 10px;
+    font-size: 1.5rem;
+    padding:1.25rem 0rem;
+    margin: auto 15vh;
 }
+
+
 
 .desktop-navigation a{
     text-decoration: none;
     font-family: PPMori-Extralight;
     color: #252525;
-    font-size: 20px;
+    font-size: 1.5rem;
 }
 
 .logo{
-    float: left;
+    margin-right:auto;
  }
 
+header .nav {
+    display: grid;
+    grid-template-columns: 5fr 6fr 1fr;
+    grid-column-gap: 1.5em;
+}
 /*GENERAL*/
+
+@media screen and (min-width: 1600px) {
+    .wrapper {
+        max-width: 85em;
+    }
+}
 
 *{
     background-color: #d5d5d5;
     margin:0;
     padding:0;
+    box-sizing: border-box;
 }
 
 h1{
@@ -93,7 +103,7 @@ h1{
 
 h4{
     font-family: PPNeueThin;
-    font-size: 30px;
+    font-size: 2rem;
 }
 
 p{
@@ -104,19 +114,43 @@ p{
 
 /*ABOUT*/
 
-.top-about{
-    width: 100%;
-    height: 500px;
-    padding: 100px 0px 100px 15px;
-
+#about{
+    margin:15em 0em;
 }
 
+.wrapper{
+    max-width: 90em;
+    padding: 0 2.5em;
+    margin: 0 auto;
+}
+
+.top-about{
+    margin: 1.5vh 15vh;
+
+}
 
 .main-name-title{
-    font-size: 100px;
-    letter-spacing: -12px;
+    font-size: 5em;
+    letter-spacing: -0.5rem;
     display: inline;
+
 }
+
+.full-main-name-title{
+    display: grid;
+    align-items: flex-end;
+    grid-template-columns: 8fr 4fr;
+    grid-column-gap: 1.25em;
+    position: relative;
+}
+
+.education-short{
+    margin-bottom: 4vh;
+    position: relative;
+
+}
+
+
 
 
 
